--- a/partials/header.html
+++ b/partials/header.html
@@ -27,7 +27,7 @@
         <li><a href="/students.html">Students</a></li>
         <li><a href="/aboutus.html">About</a></li>
         <li><a href="/contactus.html">Contact</a></li>
-        <li><a href="/pdf.html?doc=Shared Documents/course completion.pdf">Course Completion</a></li>
+        <li><a href="/pdf.html?doc=course completion.pdf">Course Completion</a></li>
       </ul>
     </nav>
 
