--- a/partials/header.html
+++ b/partials/header.html
@@ -27,8 +27,8 @@
         <li><a href="/students.html">Students</a></li>
         <li><a href="/aboutus.html">About</a></li>
         <li><a href="/contactus.html">Contact</a></li>
-        <li><a href="/partials/pdf.html?file=course%20completion.pdf">Course Completion</a></li>
-        
+        <li><a href="/partials/pdf.html?file=course completion.pdf">Course Completion</a></li>
+       
       </ul>
     </nav>
 
