--- a/partials/header.html
+++ b/partials/header.html
@@ -24,9 +24,9 @@
 
       <ul>
         <li><a href="/">Home</a></li>
-        <li><a href="/students.html">Students</a></li>
-        <li><a href="/aboutus.html">About</a></li>
-        <li><a href="/contactus.html">Contact</a></li>
+        <li><a href="/students">Students</a></li>
+        <li><a href="/aboutus">About</a></li>
+        <li><a href="/contactus">Contact</a></li>
         <li><a href="/partials/pdf.html?file=course completion.pdf">Course Completion</a></li>
        
       </ul>
